[gd_scene load_steps=6 format=3 uid="uid://b0p1hqe2unvao"]

[ext_resource type="Script" uid="uid://bpnipfy0fevy6" path="res://components/BaseResourceBar/_BaseResourceBar.gd" id="1_3r2yp"]
[ext_resource type="Texture2D" uid="uid://bthjxop0dfwqp" path="res://components/BaseResourceBar/img/progressbar_damage_under.png" id="2_yfoda"]
[ext_resource type="Texture2D" uid="uid://cg0o8ed4yobf8" path="res://components/BaseResourceBar/img/progressbar_damage_progress.png" id="3_fc0jn"]
[ext_resource type="Texture2D" uid="uid://dwagmbihulfg0" path="res://components/BaseResourceBar/img/progressbar_health_over.png" id="4_qulmq"]
[ext_resource type="Texture2D" uid="uid://de07fdnglecdv" path="res://components/BaseResourceBar/img/progressbar_health_progress.png" id="5_kkdnm"]

[node name="BaseResourceBar" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3r2yp")

[node name="SecondaryBar" type="TextureProgressBar" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture_under = ExtResource("2_yfoda")
texture_progress = ExtResource("3_fc0jn")
tint_progress = Color(1, 1, 0.192157, 1)

[node name="MainBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture_over = ExtResource("4_qulmq")
texture_progress = ExtResource("5_kkdnm")
tint_progress = Color(0.145098, 1, 0.294118, 1)
